--- a/student-portal/src/views/login.ejs
+++ b/student-portal/src/views/login.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Student Portal Login</title>
-  <link rel="stylesheet" href="/styles.css">
-</head>
+<% include('partials/header') %>
 <body>
   <header>
     <h1>Student Portal</h1>
@@ -35,4 +29,4 @@
     </p>
   </div>
 </body>
-</html>
+<% include('partials/footer') %>
