--- a/project9725/src/views/partials/header.ejs
+++ b/project9725/src/views/partials/header.ejs
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Portal</title>
-    <% include partials/navbar %>
-    <link rel="stylesheet" href="/project9725/views/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
+<body>
+    <header>
+        <nav>
+            <a href="/">Home</a>
+            <a href="/login">Login</a>
+            <a href="/dashboard">Dashboard</a>
+            <a href="/renew">Renew Password</a>
+            <a href="/forget">Forgot Password</a>
+        </nav>
+    </header>
