all nav link fixed

--- a/project9725/src/views/index.ejs
+++ b/project9725/src/views/index.ejs
@@ -1,4 +1,4 @@
-<% include('./partials/header') %>
+<%- include('./partials/header') -%>
 <main>
     <h1>Welcome to the Student Portal</h1>
     <p>This is your Express + EJS project.</p>
@@ -6,7 +6,4 @@
         <% include('partials/feature') %>
     </div>
 </main>
-<% include('partials/footer') %>
-<%- include('partials/header'); %>
-<%- include ('./partials/body.ejs'); %>
-<%- include ('./partials/footer.ejs'); %>
+<%- include ('./partials/footer.ejs'); -%>
