--- a/project9725/src/views/partials/navbar.ejs
+++ b/project9725/src/views/partials/navbar.ejs
@@ -1,9 +1,9 @@
 <nav>
     <a href="/">Home</a>
     <a href="/login">Login</a>
-    <a href="/register">Register</a>
+    <a href="/dashboard">Dashboard</a>
     <a href="/profile">Profile</a>
-    <a href="/courses">Courses</a>
+    <a href="/register">Register</a>
     <a href="/logout">Logout</a>
     <!-- Add more links as needed -->
 </nav>
