--- a/project9725/src/views/login.ejs
+++ b/project9725/src/views/login.ejs
@@ -1,4 +1,4 @@
-<% include('partials/header') %>
+<%- include('./partials/header') -%>
 <body>
   <header>
     <h1>Student Portal</h1>
@@ -29,4 +29,4 @@
     </p>
   </div>
 </body>
-<% include('partials/footer') %>
+<%- include('./partials/footer') -%>
